fix: Remove text-align:left on mobile

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -373,7 +373,6 @@ nav .logo {
   .banner h3,
   .banner p {
     width: 100%;
-    text-align: left;
   }
 }
 
@@ -421,10 +420,6 @@ nav .logo {
 
   .banner .logo {
     height: 3rem;
-  }
-
-  .banner .title {
-    text-align: left;
   }
 
   #scroll-indicator {
@@ -1057,8 +1052,7 @@ footer a:hover {
   }
 
   #credit {
-    padding: 0 2em 2rem 2rem;
-    text-align: left;
+    padding: 0 1em 1rem 1rem;
     font-size: 14px;
   }
 }
